[gd_scene load_steps=3 format=3 uid="uid://byk1lnvofiklp"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_2h0qc"]
[ext_resource type="Texture2D" uid="uid://c50kbr831s4vi" path="res://assets/imgs/slidt_phille.jpg" id="2_vrc2p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2h0qc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(573, 324)
scale = Vector2(0.664815, 0.664815)
texture = ExtResource("2_vrc2p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -73.5
offset_right = 107.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Begin game"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
